--- a/index.css
+++ b/index.css
@@ -1,11 +1,17 @@
-div {
+.container {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  place-items: center;
+}
+.container div {
   width: 33%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2px;
 }
-div button {
+button {
   width: 50%;
   padding: 3px;
   cursor: pointer;
@@ -13,6 +19,6 @@ div button {
   border: solid 1px black;
   border-radius: 2.5px;
 }
-div button:hover {
+button:hover {
   background-color: whitesmoke;
 }
