--- a/index.css
+++ b/index.css
@@ -11,6 +11,10 @@
   align-items: center;
   gap: 2px;
 }
+.container div h1 {
+  font-size: 50px;
+  margin: 0px;
+}
 button {
   width: 50%;
   padding: 3px;
